.tanzu/config/httproute-greeter-messages.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/greeter
  name: greeter-messages
spec:
  parentRefs:
    - group: networking.tanzu.vmware.com
      kind: Entrypoint
      name: main
  rules:
    - backendRefs:
        - kind: Service
          name: greeter-messages
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /greeting
